# jvm.rs

./: Cargo.toml  README.md
class_file/: Cargo.toml
class_file/src/: access.rs  descriptor.rs  lib.rs  name.rs
class_file/src/cp/: attribute.rs  mod.rs
class_file/src/instruction/: mod.rs  opcode.rs  parse.rs  type_checking.rs  type_inference.rs
class_file/src/instruction/old/: mod.rs
class_file/src/verifier/: mod.rs
java/: Cargo.toml
java_example_classfiles/: Test.java  Test2.java  Test3.jasm
jvm/: Cargo.toml
jvm/src/: class_instance.rs  class_loader.rs  classfile.rs  code.rs  errors.rs  executor.rs  lib.rs  macros.rs  opcodes.rs
jvm/src/classfile/: access.rs  attribute.rs  constant_pool.rs  descriptor.rs  mod.rs  name.rs
jvm/src/classfile/cp/: attribute.rs  mod.rs
jvm/src/classfile/instruction/: mod.rs  type_checking.rs  type_inference.rs
jvm/src/classfile/verifier/: mod.rs
jvm/src/types/: descriptor.rs
