[package]
    name = 'jvm'
    version = '0.1.0'
    edition = '2021'

[lib]
    crate-type = [ 'cdylib' ]

[dependencies]
    #zerocopy = '0.7.0-alpha.4'
    #classfile-parser = '0.3.6'
    zip = "0.6.0"

    # this will force inkwell to use prefer-static as well for llvm-sys :iea:
    # see https://github.com/llvm/llvm-project/issues/63109 for why
    llvm-sys = { version = "150.0.3", features = ["prefer-static"]}
    inkwell = { git = "https://github.com/TheDan64/inkwell", version = "0.2.0", branch = "master", features = ["llvm15-0"] }



